include/affineui/c_api_app.h


typedef struct affineui_app      affineui_app;
typedef struct affineui_document affineui_document;
typedef struct affineui_view     affineui_view;
typedef struct affineui_widget   affineui_widget;
typedef struct affineui_color {
    uint8_t r, g, b, a;
} affineui_color;
typedef enum affineui_view_theme {
    AFFINEUI_THEME_PLAIN     = 0,
    AFFINEUI_THEME_BOOTSTRAP = 1,
    AFFINEUI_THEME_DECIUS    = 2
} affineui_view_theme;
typedef enum affineui_widget_kind {
    AFFINEUI_WIDGET_NONE         = -1,
    AFFINEUI_WIDGET_ROOT         = 0,
    AFFINEUI_WIDGET_CONTAINER    = 1,
    AFFINEUI_WIDGET_TEXT         = 2,
    AFFINEUI_WIDGET_RAW_HTML     = 3,
    AFFINEUI_WIDGET_HEADING      = 4,
    AFFINEUI_WIDGET_PANEL        = 5,
    AFFINEUI_WIDGET_BUTTON       = 6,
    AFFINEUI_WIDGET_CHECKBOX     = 7,
    AFFINEUI_WIDGET_SLIDER       = 8,
    AFFINEUI_WIDGET_KNOB         = 9,
    AFFINEUI_WIDGET_TEXT_INPUT   = 10,
    AFFINEUI_WIDGET_TEXT_AREA    = 11,
    AFFINEUI_WIDGET_DROPDOWN     = 12,
    AFFINEUI_WIDGET_BUTTON_GROUP = 13,
    AFFINEUI_WIDGET_VIRTUAL_LIST = 14,
    AFFINEUI_WIDGET_CARD         = 15
} affineui_widget_kind;
typedef struct affineui_dispatch_result {
    int redraw_requested;
    int invalidate_view;
    int defer_widget_changes;
    int layout_changed;
} affineui_dispatch_result;
typedef void (*affineui_click_fn) (void* user);
typedef void (*affineui_change_fn)(void* user, const char* value);
typedef void (*affineui_build_fn) (void* user, affineui_view* view);
typedef struct affineui_app_config {
    const char*        title;                
    int                width, height;        
    affineui_color     clear_color;          
    int                high_dpi;             
    int                vsync;                
    const char*        default_font_family;  
    int                default_font_size;    
    const char* const* asset_folders;        
    size_t             asset_folder_count;
    int                perf_overlay;         
} affineui_app_config;
AFFINEUI_C_API void affineui_app_config_init(affineui_app_config* cfg);
AFFINEUI_C_API affineui_app* affineui_app_create(const affineui_app_config* cfg);
AFFINEUI_C_API void          affineui_app_destroy(affineui_app* app);
AFFINEUI_C_API void affineui_app_load_html(affineui_app* app, const char* html);
AFFINEUI_C_API int  affineui_app_load_html_file(affineui_app* app, const char* path);
AFFINEUI_C_API void affineui_app_load_view(affineui_app* app, const affineui_view* view);
AFFINEUI_C_API void affineui_app_set_stylesheet(affineui_app* app,
                                                const char* css,
                                                const char* base_url);
AFFINEUI_C_API void affineui_app_invalidate(affineui_app* app);
AFFINEUI_C_API void affineui_app_set_perf_overlay_enabled(affineui_app* app, int enabled);
AFFINEUI_C_API int  affineui_app_perf_overlay_enabled(const affineui_app* app);
AFFINEUI_C_API int  affineui_app_dispatch(affineui_app* app, const affineui_event* ev);
AFFINEUI_C_API int  affineui_app_run(affineui_app* app);
AFFINEUI_C_API void affineui_app_quit(affineui_app* app, int code);
AFFINEUI_C_API void  affineui_app_window_size(const affineui_app* app, int* out_w, int* out_h);
AFFINEUI_C_API void  affineui_app_framebuffer_size(const affineui_app* app, int* out_w, int* out_h);
AFFINEUI_C_API float affineui_app_dpi_scale(const affineui_app* app);
AFFINEUI_C_API affineui_document* affineui_app_document(affineui_app* app);