include/affineui/c_api.h


typedef struct affineui_ui affineui_ui;
typedef enum affineui_backend {
    AFFINEUI_GPU_D3D11 = 0,
    AFFINEUI_GPU_METAL = 1,
    AFFINEUI_GPU_GL    = 2,
    AFFINEUI_GPU_WGPU  = 3
} affineui_backend;
typedef enum affineui_pixel_format {
    AFFINEUI_FORMAT_DEFAULT       = 0,
    AFFINEUI_FORMAT_RGBA8         = 1,
    AFFINEUI_FORMAT_BGRA8         = 2,
    AFFINEUI_FORMAT_DEPTH         = 3,
    AFFINEUI_FORMAT_DEPTH_STENCIL = 4
} affineui_pixel_format;
typedef struct affineui_gpu_context {
    affineui_backend backend;
    const void* d3d11_device;          
    const void* d3d11_device_context;  
    const void* metal_device;          
    const void* wgpu_device;           
    int color_format;                  
    int depth_format;                  
    int sample_count;                  
} affineui_gpu_context;
typedef struct affineui_allocator {
    void* (*alloc)  (size_t size, size_t align, void* user);
    void* (*realloc)(void* p, size_t old_sz, size_t new_sz, size_t align, void* user);
    void  (*free)   (void* p, void* user);
    void*  user;
} affineui_allocator;
typedef enum affineui_log_level {
    AFFINEUI_LOG_DEBUG = 0,
    AFFINEUI_LOG_INFO  = 1,
    AFFINEUI_LOG_WARN  = 2,
    AFFINEUI_LOG_ERROR = 3
} affineui_log_level;
typedef void (*affineui_log_fn)(affineui_log_level level, const char* msg, void* user);
typedef struct affineui_init_desc {
    const affineui_gpu_context* gpu;   
    const affineui_allocator*   allocator;  
    affineui_log_fn             log;        
    void*                       log_user;
    const char* default_font_family;   
    int         default_font_size;     
} affineui_init_desc;
typedef struct affineui_frame_target {
    int   width;         
    int   height;        
    float dpi_scale;     
    int   sample_count;  
    int   clear;         
    int   viewport_x, viewport_y, viewport_w, viewport_h;
    const void* d3d11_render_view;          
    const void* d3d11_resolve_view;         
    const void* d3d11_depth_stencil_view;   
    const void* metal_current_drawable;     
    const void* metal_depth_stencil_texture;
    const void* metal_msaa_color_texture;   
    const void* wgpu_render_view;           
    const void* wgpu_resolve_view;          
    const void* wgpu_depth_stencil_view;    
    uint32_t    gl_framebuffer;             
} affineui_frame_target;
typedef enum affineui_event_type {
    AFFINEUI_EVENT_NONE         = 0,
    AFFINEUI_EVENT_MOUSE_MOVE   = 1,
    AFFINEUI_EVENT_MOUSE_DOWN   = 2,
    AFFINEUI_EVENT_MOUSE_UP     = 3,
    AFFINEUI_EVENT_MOUSE_WHEEL  = 4,
    AFFINEUI_EVENT_KEY_DOWN     = 5,
    AFFINEUI_EVENT_KEY_UP       = 6,
    AFFINEUI_EVENT_TEXT_INPUT   = 7,
    AFFINEUI_EVENT_RESIZE       = 8,
    AFFINEUI_EVENT_FOCUS_LOST   = 9,
    AFFINEUI_EVENT_FOCUS_GAINED = 10,
    AFFINEUI_EVENT_COMPOSITION  = 11
} affineui_event_type;
typedef enum affineui_mouse_button {
    AFFINEUI_MOUSE_LEFT   = 0,
    AFFINEUI_MOUSE_RIGHT  = 1,
    AFFINEUI_MOUSE_MIDDLE = 2
} affineui_mouse_button;
typedef enum affineui_key {
    AFFINEUI_KEY_UNKNOWN     = 0,
    AFFINEUI_KEY_ESCAPE      = 1,
    AFFINEUI_KEY_TAB         = 2,
    AFFINEUI_KEY_ENTER       = 3,
    AFFINEUI_KEY_BACKSPACE   = 4,
    AFFINEUI_KEY_DELETE      = 5,
    AFFINEUI_KEY_ARROW_LEFT  = 6,
    AFFINEUI_KEY_ARROW_RIGHT = 7,
    AFFINEUI_KEY_ARROW_UP    = 8,
    AFFINEUI_KEY_ARROW_DOWN  = 9,
    AFFINEUI_KEY_HOME        = 10,
    AFFINEUI_KEY_END         = 11,
    AFFINEUI_KEY_A = 12, AFFINEUI_KEY_B = 13, AFFINEUI_KEY_C = 14,
    AFFINEUI_KEY_D = 15, AFFINEUI_KEY_E = 16, AFFINEUI_KEY_F = 17,
    AFFINEUI_KEY_G = 18, AFFINEUI_KEY_H = 19, AFFINEUI_KEY_I = 20,
    AFFINEUI_KEY_J = 21, AFFINEUI_KEY_K = 22, AFFINEUI_KEY_L = 23,
    AFFINEUI_KEY_M = 24, AFFINEUI_KEY_N = 25, AFFINEUI_KEY_O = 26,
    AFFINEUI_KEY_P = 27, AFFINEUI_KEY_Q = 28, AFFINEUI_KEY_R = 29,
    AFFINEUI_KEY_S = 30, AFFINEUI_KEY_T = 31, AFFINEUI_KEY_U = 32,
    AFFINEUI_KEY_V = 33, AFFINEUI_KEY_W = 34, AFFINEUI_KEY_X = 35,
    AFFINEUI_KEY_Y = 36, AFFINEUI_KEY_Z = 37,
    AFFINEUI_KEY_DIGIT0 = 38, AFFINEUI_KEY_DIGIT1 = 39,
    AFFINEUI_KEY_DIGIT2 = 40, AFFINEUI_KEY_DIGIT3 = 41,
    AFFINEUI_KEY_DIGIT4 = 42, AFFINEUI_KEY_DIGIT5 = 43,
    AFFINEUI_KEY_DIGIT6 = 44, AFFINEUI_KEY_DIGIT7 = 45,
    AFFINEUI_KEY_DIGIT8 = 46, AFFINEUI_KEY_DIGIT9 = 47,
    AFFINEUI_KEY_SPACE = 48, AFFINEUI_KEY_MINUS = 49,
    AFFINEUI_KEY_EQUAL = 50, AFFINEUI_KEY_BRACKET_LEFT = 51,
    AFFINEUI_KEY_BRACKET_RIGHT = 52
} affineui_key;
typedef struct affineui_event {
    int         type;      
    int         x, y;      
    int         button;    
    float       wheel_dx;
    float       wheel_dy;
    int         key;       
    int         key_code;  
    const char* text;      
    int         shift, ctrl, alt, super_key;  
    int         composition_cursor;
    int         composition_clause_begin;
    int         composition_clause_end;
} affineui_event;
typedef void (*affineui_user_free_fn)(void* user);
AFFINEUI_C_API affineui_ui* affineui_ui_create(void);
AFFINEUI_C_API void         affineui_ui_destroy(affineui_ui* ui);
AFFINEUI_C_API void affineui_ui_init(affineui_ui* ui, const affineui_init_desc* desc);
AFFINEUI_C_API void affineui_ui_set_html(affineui_ui* ui, const char* html);
AFFINEUI_C_API void affineui_ui_set_css(affineui_ui* ui, const char* css);
AFFINEUI_C_API int  affineui_ui_load_file(affineui_ui* ui, const char* path);
AFFINEUI_C_API void affineui_ui_set_clear_color(affineui_ui* ui,
                                 uint8_t r, uint8_t g, uint8_t b, uint8_t a);
AFFINEUI_C_API void affineui_ui_render(affineui_ui* ui, const affineui_frame_target* target);
AFFINEUI_C_API int  affineui_ui_dispatch(affineui_ui* ui, const affineui_event* ev);
typedef void (*affineui_ui_click_fn)(void* user);
AFFINEUI_C_API void affineui_ui_on_click(affineui_ui* ui,
                                         const char* selector,
                                         affineui_ui_click_fn fn,
                                         void* user,
                                         affineui_user_free_fn user_free);
AFFINEUI_C_API int  affineui_ui_hovered_cursor(const affineui_ui* ui);
AFFINEUI_C_API int affineui_ui_set_attr(affineui_ui* ui, const char* elem_id,
                                        const char* name, const char* value);
AFFINEUI_C_API int affineui_ui_remove_attr(affineui_ui* ui, const char* elem_id,
                                           const char* name);
AFFINEUI_C_API int affineui_ui_set_text(affineui_ui* ui, const char* elem_id,
                                        const char* text);
AFFINEUI_C_API void affineui_ui_content_size(const affineui_ui* ui,
                                             int* out_w, int* out_h);
AFFINEUI_C_API int  affineui_ui_needs_update(const affineui_ui* ui);  
AFFINEUI_C_API void affineui_ui_mark_dirty(affineui_ui* ui);
AFFINEUI_C_API void affineui_ui_reset(affineui_ui* ui);
#define AFFINEUI_C_ABI_VERSION 4
AFFINEUI_C_API int         affineui_c_abi_version(void);
AFFINEUI_C_API const char* affineui_version(void);
AFFINEUI_C_API int affineui_run_html(const char* html);
AFFINEUI_C_API void affineui_string_free(char* s);